# sissa

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  image_provider.cpp  image_provider.hpp  live_image.cpp  live_image.hpp  main.cpp  main.qml
